# group8

./: .gitignore  Anchor.toml  README.MD  package.json  tsconfig.json
programs/group8/: Cargo.toml
programs/group8/src/: initial.rs  lib.rs
tests/: group8.ts  testLockNFT.ts
webapp/app/: package.json
webapp/nft-factorizer/: package.json  vercel.json
webapp/nft-factorizer/src/: App.tsx  group8.json
